--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -105,6 +105,7 @@ $overlay-start: $large-start;
 $fastduration: .1s;
 $mediumduration: .2s;
 $slowduration: .5s;
+$slowerduration: .8s;
 
 // Browser Prefixes - Which CSS prefixes should be used?
 $webkit: true;
